# AutoAnatomy

./: .gitignore  NOTICE  README.md  pyproject.toml
autoanatomy/cli/: main.py
autoanatomy/engine/: api.py  class_map.py  config.py  dicom_io.py  dicom_utils.py  nnunet_runner.py  nnunet_runtime_patches.py  parallel_runner.py  postprocessing.py  registry.py  statistics.py  toothseg_runner.py  weights.py
autoanatomy/engine/toothseg_data/: NOTICE.md  fdi_pair_distrs.json
autoanatomy/tui/: app.py  app.tcss
autoanatomy/tui/screens/: configure_run.py  home.py  load_scan.py  results.py  run_progress.py  settings.py  splash.py
autoanatomy/tui/widgets/: slice_viewer.py  structure_table.py  system_status.py
scripts/: build_portable.ps1  setup_env.ps1  setup_env.sh
tests/: test_class_map.py  test_cli_multitask.py  test_engine_smoke.py
